tests/ui/privacy/pub-priv-dep/macro-provenance.stderr
error: macro `private_reexport` from private dependency 'macro_provenance_leaf' is re-exported
  --> $DIR/macro-provenance.rs:13:9
   |
LL | pub use private_macros::definition_side as private_reexport;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/macro-provenance.rs:7:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Hidden` from private dependency 'macro_provenance_leaf' in public interface
  --> $DIR/macro-provenance.rs:18:1
   |
LL | private_macros::definition_side!(private_definition_side);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Hidden` from private dependency 'macro_provenance_leaf' in public interface
  --> $DIR/macro-provenance.rs:23:1
   |
LL | public_macros::captured_type!(captured_private, private_macros::Hidden);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Hidden` from private dependency 'macro_provenance_leaf' in public interface
  --> $DIR/macro-provenance.rs:30:1
   |
LL | public_macros::call_site_private!(call_site_private);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Hidden` from private dependency 'macro_provenance_leaf' in public interface
  --> $DIR/macro-provenance.rs:33:1
   |
LL | private_macros::nested!(private_nested);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Hidden` from private dependency 'macro_provenance_leaf' in public interface
  --> $DIR/macro-provenance.rs:38:1
   |
LL | macro_provenance_pm::call_site_path!();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

